<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#16C60B"
    tools:context="com.example.janto.ejercicio02.Main3Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/pesoNormal"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textAlignment="center" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:src="@drawable/personaje2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_persona"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <TextView
        android:text="Datos:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textColor="#fff"
        android:id="@+id/txtResul2"
        android:layout_weight="1.33" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recomendacion"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rec_imcnormal"
        android:textSize="12dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_weight="0.33"/>


</LinearLayout>
