<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FD1A17"
    tools:context="com.example.janto.ejercicio02.Main4Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="#fff"
        android:text="@string/sobrepeso"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textAlignment="center"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:src="@drawable/p"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_weight="0.29" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_persona"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <TextView
        android:text="Datos:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtResul3"
        android:layout_weight="1.12"
        android:textSize="12dp"
        android:textColor="#fff"
        android:layout_below="@+id/imageView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recomendacion"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rec_imcalto"
        android:textSize="12dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_weight="0.31" />
</LinearLayout>
