<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#06B972"
    tools:context="com.example.janto.ejercicio02.Main5Activity"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_app"
        android:layout_weight="0.03"
        android:textSize="22dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="#F0EFEF"/>
    <TextView
        android:text="Calculo de IMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:textSize="28dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#F0EFEF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_creacion"
        android:layout_weight="0.04"
        android:textSize="22dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="#F0EFEF"/>


    <TextView
        android:text="27-01-2017"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_weight="0.18"
        android:textSize="28dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#F0EFEF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="22dp"
        android:textAlignment="center"
        android:layout_marginEnd="12dp"
        android:layout_weight="0.05"
        android:textStyle="italic"
        android:textColor="#F0EFEF"/>

    <TextView
        android:text="j.antonio.enriquez.cabrera44@gmail.com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_weight="0.19"
        android:textSize="28dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#F0EFEF"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/utng"
        android:id="@+id/imageView2"
        android:layout_weight="0.15" />

</LinearLayout>
